[project]
name = "douyin-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0.4",
    "aiohttp>=3.14.1",
    "mcp>=1.27,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
